[gd_scene load_steps=2 format=3 uid="uid://b8fb5npj56ygd"]

[ext_resource type="Script" uid="uid://cchlf2nn02rar" path="res://scenes/maps/market/market_card/property_label/property_label.gd" id="1_hhpyu"]

[node name="PropertyLabel" type="MarginContainer"]
script = ExtResource("1_hhpyu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+10%"

[node name="TypeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 0.141176, 1)
layout_mode = 2
text = "Gold"
